--- a/1.4/Source/DeathRattle/DeathRattle.csproj
+++ b/1.4/Source/DeathRattle/DeathRattle.csproj
@@ -7,9 +7,19 @@
         <LangVersion>default</LangVersion>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <OutputPath>bin\Debug\</OutputPath>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <OutputPath>..\..\Assemblies\</OutputPath>
+    </PropertyGroup>
+
     <ItemGroup>
-      <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3525" />
-      <PackageReference Include="UnlimitedHugs.Rimworld.HugsLib" Version="10.0.1" />
+        <Using Remove="System.Net.Http" />
+        <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
+        <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3525" />
+        <PackageReference Include="UnlimitedHugs.Rimworld.HugsLib" Version="10.0.1" />
     </ItemGroup>
 
 </Project>
