--- a/1.4/Source/DeathRattle/DeathRattle.csproj
+++ b/1.4/Source/DeathRattle/DeathRattle.csproj
@@ -16,10 +16,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Lib.Harmony" Version="2.2.2" ExcludeAssets="runtime" />
         <Using Remove="System.Net.Http" />
-        <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
-        <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3563" />
-        <PackageReference Include="UnlimitedHugs.Rimworld.HugsLib" Version="10.0.1" />
+        <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3901" />
     </ItemGroup>
 
 </Project>
